--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,9 @@
 
 /public/assets
 
+/node_modules
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
